--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "elm-warrior",
   "private": true,
   "version": "1.0.0",
+  "scripts": {
+    "test": "elm-test"
+  },
   "dependencies": {},
   "devDependencies": {
     "elm": "^0.19.1-3",
-    "elm-format": "0.8.3"
+    "elm-format": "0.8.3",
+    "elm-test": "^0.19.1-revision2"
   }
 }
