--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "scripts": {
     "test": "elm-test"
   },
-  "dependencies": {},
   "devDependencies": {
     "elm": "^0.19.1-3",
-    "elm-format": "0.8.3",
-    "elm-test": "^0.19.1-revision2"
+    "elm-format": "^0.8.4",
+    "elm-test": "^0.19.1-revision4"
   }
 }
